--- a/demo.html
+++ b/demo.html
@@ -51,6 +51,7 @@ function draw(data) {
     // create visualization
     var container = document.getElementById('visualization');
     var options = {
+        type:'point',
         stack:false,
         groupOrder: 'content'  // groupOrder can be a property name or a sorting function
     };
