fixed css, renamed demo

--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
     <script src="js/timelineAgent.js"></script>
   <link href="js/vis/vis.css" rel="stylesheet" type="text/css" />
 
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="./css/timelineStyle.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
