--- a/buttons.html
+++ b/buttons.html
@@ -27,11 +27,11 @@
             ]
         });
 
-        var proxyAddress = 'ws://afternoon-beyond-2302.herokuapp.com/agents/proxy';
-        var proxyAddressHTTP = 'https://afternoon-beyond-2302.herokuapp.com/agents/proxy';
+//        var proxyAddress = 'ws://afternoon-beyond-2302.herokuapp.com/agents/proxy';
+//        var proxyAddressHTTP = 'https://afternoon-beyond-2302.herokuapp.com/agents/proxy';
 
-//        proxyAddress = 'ws://127.0.0.1:5000/agents/proxy';
-//        proxyAddressHTTP = 'http://127.0.0.1:5000/agents/proxy';
+        proxyAddress = 'ws://127.0.0.1:5000/agents/proxy';
+        proxyAddressHTTP = 'http://127.0.0.1:5000/agents/proxy';
 
         inputProxy = new inputAgent('inputAgent', proxyAddress);
 
