--- a/demo.html
+++ b/demo.html
@@ -59,8 +59,8 @@
   var proxyAddress = 'ws://afternoon-beyond-2302.herokuapp.com/agents/proxy';
   var proxyAddressHTTP = 'https://afternoon-beyond-2302.herokuapp.com/agents/proxy';
 
-  proxyAddress = 'ws://127.0.0.1:5000/agents/proxy';
-  proxyAddressHTTP = 'http://127.0.0.1:5000/agents/proxy';
+//  proxyAddress = 'ws://127.0.0.1:5000/agents/proxy';
+//  proxyAddressHTTP = 'http://127.0.0.1:5000/agents/proxy';
 
   timelineProxy = new timelineAgent('timelineAgent', proxyAddress);
 
