--- a/buttons.html
+++ b/buttons.html
@@ -9,10 +9,8 @@
         // if the proxy is hosted somewhere (say http://80.152.65.23) on port 5000, the path to the proxy is:
 
         // ws://80.152.65.23:5000/agents/proxy
-        // http://80.152.65.23:5000/agents/proxy  /   https://80.152.65.23:5000/agents/proxy
 
-        var proxyAddress = 'ws://afternoon-beyond-2302.herokuapp.com/agents/proxy';
-        var proxyAddressHTTP = 'https://afternoon-beyond-2302.herokuapp.com/agents/proxy';
+        var proxyAddress = 'ws://127.0.0.1:5000/agents/proxy';
     </script>
 
     <script src="./js/hammer.js"></script>
@@ -34,15 +32,10 @@
                     type: 'ws',
                     url: 'ws://agents/:id'
                 },
-                {
-                    type: 'http'
-                }
             ]
         });
 
         inputProxy = new inputAgent('inputAgent', proxyAddress);
-
-        inputProxy.wakeProxy(proxyAddressHTTP);
 
         inputProxy.connectToProxy();
         inputProxy.getEventTypes().then(function (reply) {
