--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
       // change these adresses to correspond to the path of the proxy
       // if the proxy is hosted somewhere (say http://80.152.65.23) on port 5000, the path to the proxy is:
 
-      // ws://80.152.65.23:5000/agents/proxy
-      // http://80.152.65.23:5000/agents/proxy  /   https://80.152.65.23:5000/agents/proxy
-//    var proxyAddress = 'ws://afternoon-beyond-2302.herokuapp.com/agents/proxy';
-//    var proxyAddressHTTP = 'https://afternoon-beyond-2302.herokuapp.com/agents/proxy';
-
-      var proxyAddress = 'ws://127.0.0.1:5000/agents/proxy';
+      var proxyAddress = 'ws://'+location.hostname+(location.port ? ':'+location.port: '')+'/agents/proxy';
   </script>
 
 
